Fix crash in lock_tag (in byFirstArg())
This fixes #590 which was caused by a mistake in the error handler in
MonitorManager::byFirstArg() which is used for the following commands:
list_padding move_monitor rename_monitor lock_tag unlock_tag

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,14 @@
 herbstluftwm NEWS -- History of user-visible changes
 ----------------------------------------------------
 
+Current git version
+-------------------
+
+  * Bug fixes:
+    - Fix a crash in the error handler when a invalid monitor name is
+      passed. (Affects list_padding move_monitor rename_monitor lock_tag
+      unlock_tag)
+
 Release 0.8.1 on 2020-04-21
 ---------------------------
 
