--- a/NEWS
+++ b/NEWS
@@ -8,6 +8,8 @@ Current git version
     focus_follows_mouse is enabled)
   * The commands 'close_and_remove' / 'close_or_remove' act like 'close' for
     floating clients
+  * The decoration window allows focusing, moving, and resizing the client
+    via the mouse (as known from standard floating window managers)
   * Bug fixes:
     - Fix a crash in the error handler when a invalid monitor name is
       passed. (Affects list_padding move_monitor rename_monitor lock_tag
