Document -c for old tox versions

--- a/HACKING
+++ b/HACKING
@@ -35,8 +35,10 @@ can run the following from the build directory:
     tox -c ..  -- -v --maxfail=1
 
 If you run arch linux, it may be necessary to add -e py38 to the tox parameters
-(that is, before the --). The argument after the -- are pytest parameters (add
--h to see a help).
+(that is, before the --). If you have an old version of tox installed, it may be
+necessary to pass ../tox.ini instead of .. to the -c parameter.
+
+The argument after the -- are pytest parameters (add -h to see a help).
 
 [1] http://pytest.org/
 [2] https://tox.readthedocs.io/
